--- a/ScuffedVideoPlayer/App.config
+++ b/ScuffedVideoPlayer/App.config
@@ -5,6 +5,10 @@
         <assemblyIdentity name="0Harmony" publicKeyToken="null" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.3.0.0" newVersion="2.3.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
