--- a/ScuffedVideoPlayer/ScuffedVideoPlayer.csproj
+++ b/ScuffedVideoPlayer/ScuffedVideoPlayer.csproj
@@ -12,6 +12,7 @@
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <LangVersion>9</LangVersion>
+        <Nullable>enable</Nullable>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -47,8 +48,11 @@
         <Reference Include="CommandSystem.Core">
           <HintPath>..\..\..\..\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\CommandSystem.Core.dll</HintPath>
         </Reference>
+        <Reference Include="MediaToolkit, Version=1.1.0.1, Culture=neutral, processorArchitecture=MSIL">
+          <HintPath>..\packages\MediaToolkit.1.1.0.1\lib\net40\MediaToolkit.dll</HintPath>
+        </Reference>
         <Reference Include="Mirror">
-          <HintPath>..\..\..\..\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\Mirror.dll</HintPath>
+          <HintPath>..\..\..\..\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\Mirror-Publicized.dll</HintPath>
         </Reference>
         <Reference Include="Mono.Cecil, Version=0.11.4.0, Culture=neutral, PublicKeyToken=50cebf1cceb9d05e, processorArchitecture=MSIL">
           <HintPath>..\packages\Mono.Cecil.0.11.4\lib\net40\Mono.Cecil.dll</HintPath>
@@ -78,6 +82,12 @@
           <HintPath>..\packages\MonoMod.Utils.25.0.0-prerelease.2\lib\net452\MonoMod.Utils.dll</HintPath>
         </Reference>
         <Reference Include="mscorlib" />
+        <Reference Include="NorthwoodLib">
+          <HintPath>..\..\..\..\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\NorthwoodLib.dll</HintPath>
+        </Reference>
+        <Reference Include="NVorbis, Version=0.10.5.0, Culture=neutral, processorArchitecture=MSIL">
+          <HintPath>..\packages\NVorbis.0.10.5\lib\net45\NVorbis.dll</HintPath>
+        </Reference>
         <Reference Include="NWAPIPermissionSystem">
           <HintPath>C:\Users\admin\AppData\Roaming\SCP Secret Laboratory\PluginAPI\NWAPIPermissionSystem.dll</HintPath>
         </Reference>
@@ -88,10 +98,33 @@
           <HintPath>C:\Users\admin\AppData\Roaming\SCP Secret Laboratory\PluginAPI\SCPSLAudioApi.dll</HintPath>
         </Reference>
         <Reference Include="System" />
+        <Reference Include="System.Buffers, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+          <HintPath>..\packages\System.Buffers.4.4.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
+        </Reference>
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
         <Reference Include="System.Drawing">
           <HintPath>..\..\..\..\Steam\steamapps\common\SCP Secret Laboratory Dedicated Server\SCPSL_Data\Managed\System.Drawing.dll</HintPath>
+        </Reference>
+        <Reference Include="System.IO.Compression, Version=4.1.2.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+          <HintPath>..\packages\System.IO.Compression.4.3.0\lib\net46\System.IO.Compression.dll</HintPath>
+        </Reference>
+        <Reference Include="System.IO.Compression.FileSystem" />
+        <Reference Include="System.IO.Compression.ZipFile, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+          <HintPath>..\packages\System.IO.Compression.ZipFile.4.3.0\lib\net46\System.IO.Compression.ZipFile.dll</HintPath>
+        </Reference>
+        <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+          <HintPath>..\packages\System.Memory.4.5.3\lib\netstandard2.0\System.Memory.dll</HintPath>
+        </Reference>
+        <Reference Include="System.Numerics" />
+        <Reference Include="System.Numerics.Vectors, Version=4.1.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+          <HintPath>..\packages\System.Numerics.Vectors.4.4.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+        </Reference>
+        <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.4.1, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+          <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.4.5.2\lib\netstandard2.0\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+        </Reference>
+        <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+          <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
         </Reference>
         <Reference Include="System.Xml" />
         <Reference Include="UnityEngine">
@@ -108,8 +141,25 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="API\LoadedVideo.cs" />
+        <Compile Include="API\VideoExtractor.cs" />
+        <Compile Include="API\VideoLoadingException.cs" />
+        <Compile Include="Audio\AudioNpc.cs" />
+        <Compile Include="Audio\FakeConnection.cs" />
+        <Compile Include="Commands\ListCommand.cs" />
+        <Compile Include="Commands\PlayCommand.cs" />
+        <Compile Include="Commands\VideoPlayerCommand.cs" />
         <Compile Include="Config.cs" />
-        <Compile Include="PlayCommand.cs" />
+        <Compile Include="Output\Displays\IntercomDisplay.cs" />
+        <Compile Include="Output\IDisplay.cs" />
+        <Compile Include="Output\ITextDisplay.cs" />
+        <Compile Include="Output\PlaybackHandle.cs" />
+        <Compile Include="Patches\CheckRangePatch.cs" />
+        <Compile Include="Patches\FpcRotationPatch.cs" />
+        <Compile Include="Patches\InstanceModeSetterPatch.cs" />
+        <Compile Include="Patches\UpdateFloating.cs" />
+        <Compile Include="Playback\IPlayback.cs" />
+        <Compile Include="Playback\TextPlayback.cs" />
         <Compile Include="Plugin.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
