--- a/ScuffedVideoPlayer/packages.config
+++ b/ScuffedVideoPlayer/packages.config
@@ -1,11 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Lib.Harmony" version="2.2.2" targetFramework="net48" />
+  <package id="MediaToolkit" version="1.1.0.1" targetFramework="net48" />
   <package id="Mono.Cecil" version="0.11.4" targetFramework="net48" />
   <package id="MonoMod.Backports" version="1.0.0-prerelease.2" targetFramework="net48" />
   <package id="MonoMod.Core" version="1.0.0-prerelease.2" targetFramework="net48" />
   <package id="MonoMod.ILHelpers" version="1.0.0-prerelease.2" targetFramework="net48" />
   <package id="MonoMod.Utils" version="25.0.0-prerelease.2" targetFramework="net48" />
+  <package id="NVorbis" version="0.10.5" targetFramework="net48" />
   <package id="Northwood.PluginAPI" version="12.0.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net48" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net48" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="YamlDotNet" version="11.0.1" targetFramework="net48" />
 </packages>
